# Source-Spray-Selector

./: .gitignore  Cargo.toml  README.md  Source_Spray_Selector.desktop  build.rs  compileall.sh  gamepath.json
.github/workflows/: rust.yml
PUBLISH/: gamepath.json
docs/: index.html
src/: main.rs
