[package]
name = "Source_Spray_Manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "*"
egui = "*"
vtf = "*"
bcndecode = "*"   
image = "*"
serde_json = "*"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
serde = "*"



[build-dependencies]
winres = "0.1.12"