[package]
name = "Source_Spray_Selector"
version = "1.1.0"
authors = ["shadow <puro@mailbox.org>"]
edition = "2024"

[dependencies]
eframe = "*"
egui = "*"
vtf = "*"
bcndecode = "*"   
image = "*"
serde_json = "*"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
serde = { version = "1.0.228", features = ["derive"] }


[build-dependencies]
winres = "0.1.12"